Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,7 @@
 \usepackage[stable]{footmisc} %for footnote in title
 \usepackage{caption}
 \usepackage{listings}
+\renewcommand{\lstlistingname}{Code}
 \lstset{captionpos=b} % set the caption position to bottom
 
 
